[package]
name = "dataset_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet = { version = "55.0.0", features = ["arrow", "snap", "lz4", "brotli"] }
arrow = { version = "55.0.0" }
arrow-array = { version = "55.0.0" }
arrow-schema = { version = "55.0.0" }
serde_json = "1.0"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.0", features = ["derive"] }

# 可选依赖，用于SIMD优化
simd-json = { version = "0.15.1", optional = true }

[features]
default = []
simd-json = ["dep:simd-json"]

# 为发布版本优化
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

# 针对Windows交叉编译的配置
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]